# tg-bots

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  SPP_SETUP.md  TASKS.md  celeryconfig.py  docker-compose.local.yml  docker-compose.yml  env.example  init_data.sql  migration_add_orders_results.sql  migration_add_parser_fields.sql  migration_add_spp_fields.sql  pyproject.toml  requirements-dev.txt  requirements.txt  test_basic.py  test_daily_summary_service.py  test_excel_processor.py  test_excel_upload.py  test_order_processor.py  test_refactored_reports.py  test_report_checker.py
.cursor/rules/: fastapi.mdc  gitflow.mdc  task-list.mdc  telegram.mdc
.gitlab/: CODEOWNERS
bot/: app_v2.py  main.py
db/: models.py  session.py
docs/: BRANCH_PROTECTION.md  CICD_SETUP.md  GITLAB_SECRETS_SETUP.md  REFACTORING_FINAL_REPORT.md  REFACTORING_PHASE2_SUMMARY.md  REFACTORING_PHASE3_SUMMARY.md  REFACTORING_PHASE4_SUMMARY.md  REFACTORING_PHASE5_SUMMARY.md  REFACTORING_SUMMARY.md  SETUP_PROTECTION.md
services/: daily_summary_service.py  excel_loader.py  excel_processor.py  order_processor.py  parser_service_v2.py  report_checker.py  report_generator.py  telegram_notifier.py
services/collectors/: __init__.py  ozon.py  wb.py
services/reporters/: __init__.py
tasks/: app_v2.py  refactored_reports.py
